--- a/style.css
+++ b/style.css
@@ -6,3 +6,4 @@
 @import url(css/lista_tareas.css);
 @import url(css/testimonial.css);
 @import url(css/footer.css);
+@import url(css/seccion_precios.css);
