--- a/style.css
+++ b/style.css
@@ -7,3 +7,4 @@
 @import url(css/testimonial.css);
 @import url(css/footer.css);
 @import url(css/seccion_precios.css);
+@import url(css/sidebar.css);
